soft-tenancy/tenantb/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio.io/rev: default
  name: tenant-b
