soft-tenancy/tenantb/ap.yml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: strict-tenant-isolation
  namespace: tenant-b
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces: ["tenant-b"]
